--- a/src/Modules/Users/Modules.Users.Infrastructure/Modules.Users.Infrastructure.csproj
+++ b/src/Modules/Users/Modules.Users.Infrastructure/Modules.Users.Infrastructure.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\Modules.Users.Application\Modules.Users.Application.csproj" />
     <ProjectReference Include="..\Modules.Users.Presentation\Modules.Users.Presentation.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.3" />
+  </ItemGroup>
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
