--- a/src/Modules/Users/Modules.Users.Application/Modules.Users.Application.csproj
+++ b/src/Modules/Users/Modules.Users.Application/Modules.Users.Application.csproj
@@ -2,6 +2,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Common\Modules.Common.Application\Modules.Common.Application.csproj" />
     <ProjectReference Include="..\Modules.Users.Domain\Modules.Users.Domain.csproj" />
+    <ProjectReference Include="..\Modules.Users.IntegrationEvents\Modules.Users.IntegrationEvents.csproj" />
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
